exports[`normalize Upgrade help logs a warning when automocking is disabled and unmockedModulePathPatterns is used 1`] = `
"[33m[1m● [22mThe \`unmockedModulePathPatterns\` setting is defined but automocking is disabled in Jest. Please either remove \`unmockedModulePathPatterns\` from your configuration or explicitly set \`\"automock\": true\` in your configuration if you wish to use automocking.

  Jest 15 changed the default configuration for tests and makes Jest easier to
  use and less confusing for beginners. All previous defaults can be restored
  if your project depends on it. A comprehensive explanation of the breaking
  changes and an upgrade guide can be found in the release blog post linked
  below.

  [1mJest Issue Tracker:[22m https://github.com/facebook/jest/issues
  [1mConfiguration Documentation:[22m https://facebook.github.io/jest/docs/configuration.html
  [1mRelease Blog Post:[22m https://facebook.github.io/jest/blog/2016/09/01/jest-15.html
[39m"
`;

exports[`normalize Upgrade help logs a warning when automocking is explicitly disabled 1`] = `
"[33m[1m● [22mAutomocking was disabled by default in Jest. The setting \`\"automock\": false\` can safely be removed from Jest\'s config.

  Jest 15 changed the default configuration for tests and makes Jest easier to
  use and less confusing for beginners. All previous defaults can be restored
  if your project depends on it. A comprehensive explanation of the breaking
  changes and an upgrade guide can be found in the release blog post linked
  below.

  [1mJest Issue Tracker:[22m https://github.com/facebook/jest/issues
  [1mConfiguration Documentation:[22m https://facebook.github.io/jest/docs/configuration.html
  [1mRelease Blog Post:[22m https://facebook.github.io/jest/blog/2016/09/01/jest-15.html
[39m"
`;

exports[`normalize Upgrade help throws when using old configuration options 1`] = `
"[31mThe setting \`persistModuleRegistryBetweenSpecs\` was removed from Jest. Set \`\"resetModules\": true\` in your configuration to retain the previous behavior

  Jest 15 changed the default configuration for tests and makes Jest easier to
  use and less confusing for beginners. All previous defaults can be restored
  if your project depends on it. A comprehensive explanation of the breaking
  changes and an upgrade guide can be found in the release blog post linked
  below.

  [1mJest Issue Tracker:[22m https://github.com/facebook/jest/issues
  [1mConfiguration Documentation:[22m https://facebook.github.io/jest/docs/configuration.html
  [1mRelease Blog Post:[22m https://facebook.github.io/jest/blog/2016/09/01/jest-15.html
[39m"
`;

exports[`normalize Upgrade help throws when using old configuration options 2`] = `
"[31mThe setting \`persistModuleRegistryBetweenSpecs\` was removed from Jest. This configuration option can safely be removed.

  Jest 15 changed the default configuration for tests and makes Jest easier to
  use and less confusing for beginners. All previous defaults can be restored
  if your project depends on it. A comprehensive explanation of the breaking
  changes and an upgrade guide can be found in the release blog post linked
  below.

  [1mJest Issue Tracker:[22m https://github.com/facebook/jest/issues
  [1mConfiguration Documentation:[22m https://facebook.github.io/jest/docs/configuration.html
  [1mRelease Blog Post:[22m https://facebook.github.io/jest/blog/2016/09/01/jest-15.html
[39m"
`;

exports[`normalize Upgrade help throws when using old configuration options 3`] = `
"[31mThe setting \`setupEnvScriptFile\` was removed from Jest. Instead, use the \`setupFiles\` setting:

    \"setupFiles\": [\"<rootDir>/setup.js\"]

  Jest 15 changed the default configuration for tests and makes Jest easier to
  use and less confusing for beginners. All previous defaults can be restored
  if your project depends on it. A comprehensive explanation of the breaking
  changes and an upgrade guide can be found in the release blog post linked
  below.

  [1mJest Issue Tracker:[22m https://github.com/facebook/jest/issues
  [1mConfiguration Documentation:[22m https://facebook.github.io/jest/docs/configuration.html
  [1mRelease Blog Post:[22m https://facebook.github.io/jest/blog/2016/09/01/jest-15.html
[39m"
`;

exports[`normalize Upgrade help throws when using old configuration options 4`] = `
"[31mThe settings \`testDirectoryName\` and \`testFileExtensions\` were removed from Jest. Instead, use \`testRegex\` like this:
    \"testRegex\": \"(/test/.*|\\\\.(test|spec))\\\\.(js|json|jsx|node)$\"

  Jest 15 changed the default configuration for tests and makes Jest easier to
  use and less confusing for beginners. All previous defaults can be restored
  if your project depends on it. A comprehensive explanation of the breaking
  changes and an upgrade guide can be found in the release blog post linked
  below.

  [1mJest Issue Tracker:[22m https://github.com/facebook/jest/issues
  [1mConfiguration Documentation:[22m https://facebook.github.io/jest/docs/configuration.html
  [1mRelease Blog Post:[22m https://facebook.github.io/jest/blog/2016/09/01/jest-15.html
[39m"
`;

exports[`normalize Upgrade help throws when using old configuration options 5`] = `
"[31mThe settings \`testDirectoryName\` and \`testFileExtensions\` were removed from Jest. Instead, use \`testRegex\` like this:
    \"testRegex\": \"(/__tests__/.*|\\\\.(test|spec))\\\\.(js|ts|json|jsx|node)$\"

  Jest 15 changed the default configuration for tests and makes Jest easier to
  use and less confusing for beginners. All previous defaults can be restored
  if your project depends on it. A comprehensive explanation of the breaking
  changes and an upgrade guide can be found in the release blog post linked
  below.

  [1mJest Issue Tracker:[22m https://github.com/facebook/jest/issues
  [1mConfiguration Documentation:[22m https://facebook.github.io/jest/docs/configuration.html
  [1mRelease Blog Post:[22m https://facebook.github.io/jest/blog/2016/09/01/jest-15.html
[39m"
`;
